farve i navbar og semantiske tags

--- a/css/materialer.css
+++ b/css/materialer.css
@@ -47,7 +47,7 @@ nav {
     left: 0;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent sort baggrund */
-    color: white;
+    color:#E7E0D6;
     padding: 1rem 0;
     text-align: center;
 }
@@ -427,7 +427,7 @@ form input[type="submit"]:hover {
         font-size: 2.5rem;
         font-weight: bold; */
 
-        background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 96.1%;
     color: var(--primary);
@@ -437,8 +437,7 @@ form input[type="submit"]:hover {
     height: auto%;
     text-transform: uppercase;
     }
-    }
-}
+
 
 .cover-photo-computer {
     display: none;
@@ -476,7 +475,7 @@ form input[type="submit"]:hover {
     }
 
     nav ul li a:hover {
-        background: var(--accent);
+        background: #4f402c;
     }
 
     nav ul li ul {
