--- a/css/prinsesse.css
+++ b/css/prinsesse.css
@@ -38,7 +38,7 @@ nav {
     left: 0;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent sort baggrund */
-    color: white;
+    color: #E7E0D6;
     padding: 1rem 0;
     text-align: center;
 }
