--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ nav {
     left: 0;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent sort baggrund */
-    color: white;
+    color:#E7E0D6;
     padding: 1rem 0;
     text-align: center;
 }
@@ -416,7 +416,7 @@ form input[type="submit"]:hover {
     }
 
     nav ul li a:hover {
-        background: var(--accent);
+        background:#4f402c;
     }
 
     nav ul li ul {
