--- a/css/materialer.css
+++ b/css/materialer.css
@@ -123,6 +123,8 @@ header #menu-bar ul li:hover > ul {
 
 }
 
+
+
 .infographic {
     width: 100%;
     
@@ -221,12 +223,11 @@ display: none;
     position: fixed;      
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -72%); 
+    transform: translate(-50%, -50%); 
     color: var(--primary);
     background-color: rgba(0, 0, 0, 0.8);
-    border-radius: 10px;
     width: 100%;          
-    padding: 14rem 1.3rem;
+    padding: 22rem 1.3rem;
     text-align: center;
     font-size: 1rem;
     z-index: 10;
@@ -279,6 +280,24 @@ teksten korrekt. Selvom der står det samme i dem.  */
     
   }
 
+.infotitel {
+    text-align: center;
+    
+}
+
+.overlay-text1 {
+    color: var(--extra);
+    font-size: 0.8rem;
+    font-weight: bold;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 20%;
+    align-content: center;
+    z-index: 5;
+    transform: translate(-0%, -520%);  
+    
+  }
 
 
 .bestseller {
@@ -395,7 +414,35 @@ form input[type="submit"]:hover {
         width: 100%; /* Ensure containers fill the screen width */
     }
 
+    .infohover img {
+        width: 207%;
+    }
+
+    #satin {
+        top: 14.2%;
+        left: 60.3%;
+    }
+
+
+    #blonde {
+        top: 14.2%;
+        left: 20.1%;
+    }
+
+
+    #organza {
+        top: 66%;
+        right: 25.3%;
+    }
+
+    .overlay-text1 {
+        font-size: 1.2rem;
+    }
   
+
+    .infohover p {
+        padding-left: 1.4rem;
+    }
 }
 
 
@@ -414,6 +461,38 @@ form input[type="submit"]:hover {
 
     }
 
+    .infohover img {
+        width: 220%;
+    }
+
+    #organza {
+        top: 66%;
+        right: 25.7%;
+    }
+
+    #blonde {
+        top: 14.0%;
+        left: 20.1%;
+    }
+
+    #crepe {
+        left: 7.6%;
+    }
+
+
+    .overlay-text1 {
+        font-size: 1.5rem;
+    }
+
+    .infohover p {
+        font-size: 2rem;
+        padding-top: 27rem;
+        padding-bottom: 27rem;
+    }
+
+    
+
+
 } 
 
 @media only screen and (min-width: 1024px) and (orientation: landscape){ /* tablet landscape */
@@ -423,7 +502,7 @@ form input[type="submit"]:hover {
     .matrialertitel {
     background-color: rgba(0, 0, 0, 0.8);
     position: absolute;
-    top: 96.1%;
+    top: 92%;
     color: var(--primary);
     font-weight: bold;
     font-size: 5rem;
@@ -439,6 +518,48 @@ form input[type="submit"]:hover {
 
 .cover-photo-computer {
     display: none;
+}
+
+.overlay-text1 {
+    font-size: 2rem;
+}
+
+.infohover img {
+    width: 280%;
+}
+
+#satin {
+    left: 60.5%;
+    top:14.7% ;
+}
+
+#silke {
+    top: 40.5%;
+}
+
+#organza {
+    top: 66.6%;
+    right: 27.1% ;
+}
+
+#blonde {
+    top: 14.8%;
+    left: 20.4%;
+}
+
+#crepe {
+    top: 40.3%;
+}
+
+#tyl {
+    top: 67% ;
+    left: 17.9%;
+}
+
+.infohover p {
+    font-size: 2.2rem;
+}
+
 }
 
 @media only screen and (min-width: 1200px){ /* til pc */
@@ -499,7 +620,7 @@ form input[type="submit"]:hover {
     .matrialertitel { 
     background-color: rgba(0, 0, 0, 0.8);
     position: absolute;
-    top: 90%;
+    top: 80%;
     color: var(--primary);
     font-weight: bold;
     font-size: 5rem;
@@ -611,7 +732,22 @@ form input[type="submit"]:hover {
         padding: 0; 
         margin: 0; 
       }
+
+    .overlay-text1 {
+        font-size: 2.2rem;
+    }
+
+.infohover img {
+    width: 330%;
+}
+
+#organza {
+    top: 66.6%;
+    right: 28% ;
 }
 
 }
+
+
+
 
