--- a/css/materialer.css
+++ b/css/materialer.css
@@ -132,6 +132,7 @@ header #menu-bar ul li:hover > ul {
     overflow:hidden;
     width: 100%;
     object-fit: contain;
+    cursor: pointer;
 }
 
 #satin {
