--- a/css/materialer.css
+++ b/css/materialer.css
@@ -369,7 +369,7 @@ form input[type="submit"]:hover {
     border-radius: 4px; 
 }
 
-@media only screen and (min-width: 540px) and (orientation: landscape){ /* Til mobil der ligger ned, aka landscape mode */
+@media only screen and (min-width: 540px) { 
     
     .left-icon {
         width: 8%;
@@ -462,7 +462,7 @@ form input[type="submit"]:hover {
 
 } 
 
-@media only screen and (min-width: 1024px) and (orientation: landscape){ /* tablet landscape */
+@media only screen and (min-width: 1024px){ 
     .matrialertitel {
         display: block;
     }
