--- a/css/prinsesse.css
+++ b/css/prinsesse.css
@@ -314,7 +314,7 @@ form input[type="submit"]:hover {
     border-radius: 4px; 
 }
 
-@media only screen and (min-width: 540px) and (orientation: landscape){ /* Til mobil der ligger ned, aka landscape mode */
+@media only screen and (min-width: 540px) { 
     
     .left-icon {
         width: 8%;
@@ -387,7 +387,7 @@ form input[type="submit"]:hover {
     }
 }
 
-@media only screen and (min-width: 1024px) and (orientation: landscape){
+@media only screen and (min-width: 1024px) {
    
         .container1 .slider-holder1, .container2 .slider-holder2{
             display: grid;
